--- a/component/component1.html
+++ b/component/component1.html
@@ -13,8 +13,8 @@
         <silde-item  v-for="item in groceryList" :mydata="item"></silde-item>
       </div>
     </div>
-    <script src="libs/dist/vue.min.js"></script>
-    <script src="component/component.js"></script>
+    <script src="/libs/dist/vue.min.js"></script>
+    <script src="component.js"></script>
     <script>
       // var exampleData = {
       //   message:'hello World',
